--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <input
+  id="location"
+  type="text"
+  placeholder="City, State"
+  autocomplete="off"
+/>
   <div id="weather">Loading...</div>
   <script src="script.js"></script>
 </body>
